[package]
name = "rust_tui"
version = "0.1.0"
edition = "2024"
description = "A tui for viewing jules sessions and their prompts"
license = "MIT"

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.12", features= ["blocking", "json"]}
mpsc = "0.2.6"
throbber-widgets-tui = "0.11.0"
webbrowser = "1.2.1"
